kubernetes/ingress/managed-cert-ingress-old.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress-old
  annotations:
    networking.gke.io/managed-certificates: managed-cert-old
    kubernetes.io/ingress.class: "gce"
    # IMPORTANTE: https://cloud.google.com/kubernetes-engine/docs/concepts/ingress#deprecated_annotation
    # Figura como deprecated por kubernetes pero GCP lo sigue necesitando (el actualizado NO funciona para GCP hasta la fecha).
spec:
  defaultBackend:
    service:
      name: webapp
      port:
        number: 80
