kubernetes/ingress/v3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: v3-ingress
  annotations:
    # OJO que si se deploya multiples veces se van a crear constantemente nuevas IPs
    networking.gke.io/managed-certificates: v3-managed-cert
    # Notar que el encriptado SSL (HTTPS) va hasta el LoadBalancer manejado por google. Osea que el trafico que le llega al nginx ya es HTTP
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: webapp
      port:
        number: 80
